--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "altair>=6.0.0",
     "duckdb>=1.4.2",
     "ipykernel>=7.1.0",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
+    "ruff>=0.14.5",
 ]
